--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,22 @@
 <html lang="en">
   <head>
     <title>domsPlace</title>
-    <meta charset="utf-8" />
+    <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
+    <meta charset="utf-8"  />
     <meta name="keywords" content="domsplace, programming, gaming, anime, livestreaming, dominic, masters, dom" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
     <meta name="description" content="domsPlace, Personal Website of Dominic Masters as well as video games, anime, programming and more." />
     <meta name="apple-mobile-web-app-capable" content="yes" />
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-66393210-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-66393210-1');
+    </script>
   </head>
 
   <body>
