Finally made fading elements visible until first scroll.

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
   <head>
-    <title>domsPlace</title>
+    <title>domsPlace - Personal Site of Dominic Masters</title>
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
     <meta charset="utf-8"  />
     <meta name="keywords" content="domsplace, programming, gaming, anime, livestreaming, dominic, masters, dom" />
