Fixed not connecting to email

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>domsPlace - Personal Site of Dominic Masters</title>
+    
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
     <meta charset="utf-8"  />
     <meta name="keywords" content="domsplace, programming, gaming, anime, livestreaming, dominic, masters, dom" />
@@ -11,8 +12,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-66393210-1"></script>
-    <script>
+    <script type="text/javascript" async src="https://www.googletagmanager.com/gtag/js?id=UA-66393210-1"></script>
+    <script type="text/javascript">
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
