Updated some meta tags, hopefully fix an android scale issue.

--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
   <head>
     <title>domsPlace - Personal Site of Dominic Masters</title>
-    
+
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
     <meta charset="utf-8"  />
-    <meta name="keywords" content="domsplace, programming, gaming, anime, livestreaming, dominic, masters, dom" />
+    <meta name="keywords" content="domsplace, programming, gaming, shopify, livestreaming, dominic, masters, dom" />
+    <meta name="description" content="domsPlace is the home of programmer and developer Dominic Masters, specialising in eCommerce and full-stack development solutions for a wide range of platforms, primarily Shopify." />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="description" content="domsPlace, Personal Website of Dominic Masters as well as video games, anime, programming and more." />
     <meta name="apple-mobile-web-app-capable" content="yes" />
 
