--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -3,7 +3,7 @@
   <h2>Developer, Nerd, Occasionally Funny.</h2>
 
   <p>
-    Australian nerd with a passion for all things computing, coffee and
+    Australian-American nerd with a passion for all things computing, coffee and
     video games. Currently residing in Sydney, Australia.
   </p>
 
