Updated GIT URl

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -102,5 +102,5 @@
   </p>
 
   <p><a href="//www.linkedin.com/in/dominic-masters-86732678/">LinkedIn</a></p>
-  <p><a href="//github.com/YourWishes">GitHub</a></p>
+  <p><a href="//git.wish.moe/YourWishes">GitHub</a></p>
 </section>
