--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -4,7 +4,7 @@
 
   <p>
     Australian-American nerd with a passion for all things computing, coffee and
-    video games. Currently residing in Los Angeles, California.
+    video games. Currently residing in Illinois.
   </p>
 
   <p>
